# axum-test

./: Cargo.toml  readme.md
src/: main.rs  settings.rs
src/models/users/: example_user_repo.rs  mod.rs
src/models/users/dto/: create_user.rs  mod.rs
src/routes/: health.rs  mod.rs  users.rs
src/routes/users/: index.rs  mod.rs
