[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
config = "0.13.3"
dotenv = "0.15.0"
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = [
    "macros",
    "rt-multi-thread",
]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
]}
